[gd_scene load_steps=10 format=2]

[ext_resource path="res://HUD and Menus/Themes/general_theme.tres" type="Theme" id=1]
[ext_resource path="res://HUD and Menus/Themes/Styles/stylebox_box.tres" type="StyleBox" id=2]
[ext_resource path="res://HUD and Menus/Scripts/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://HUD and Menus/Icons/play.png" type="Texture" id=4]
[ext_resource path="res://HUD and Menus/Icons/x.png" type="Texture" id=5]
[ext_resource path="res://HUD and Menus/Icons/epsilon_small.png" type="Texture" id=6]
[ext_resource path="res://HUD and Menus/Icons/gear.png" type="Texture" id=7]
[ext_resource path="res://HUD and Menus/options/Options.tscn" type="PackedScene" id=8]
[ext_resource path="res://HUD and Menus/smart_ui_nodes/smart_button/SmartButton.tscn" type="PackedScene" id=9]

[node name="TitleScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_right = 60.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource( 1 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="main"]
margin_top = 31.0
margin_right = 120.0
margin_bottom = 63.0
size_flags_horizontal = 5
size_flags_vertical = 0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="title" type="Label" parent="main"]
margin_top = 67.0
margin_right = 120.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0.937255, 0.52549, 0.129412, 1 )
text = "Project Epsilon"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ver" type="Label" parent="main"]
margin_top = 85.0
margin_right = 120.0
margin_bottom = 99.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.129412, 0.235294, 0.937255, 1 )
text = "Beta 2.5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="main"]
margin_top = 103.0
margin_right = 120.0
margin_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="play" parent="main" instance=ExtResource( 9 )]
margin_top = 111.0
margin_right = 120.0
margin_bottom = 133.0
shortcut_in_tooltip = false
text = "Play"
icon = ExtResource( 4 )
flat = true

[node name="options" parent="main" instance=ExtResource( 9 )]
margin_top = 137.0
margin_right = 120.0
margin_bottom = 159.0
shortcut_in_tooltip = false
text = "Options"
icon = ExtResource( 7 )
flat = true

[node name="quit" parent="main" instance=ExtResource( 9 )]
margin_top = 163.0
margin_right = 120.0
margin_bottom = 185.0
shortcut_in_tooltip = false
text = "Quit"
icon = ExtResource( 5 )
flat = true

[node name="saves" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saves_list" type="ItemList" parent="saves"]
anchor_right = 1.0
margin_bottom = 152.0
custom_styles/bg = ExtResource( 2 )
custom_colors/font_color_selected = Color( 0.823529, 0.654902, 0.0823529, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="saves"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 22.0
margin_right = 90.0
text = "New Save"
flat = true

[node name="VSeparator" type="VSeparator" parent="saves/HBoxContainer"]
margin_left = 94.0
margin_right = 98.0
margin_bottom = 20.0

[node name="load" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 102.0
margin_right = 175.0
text = "Load Save"
flat = true

[node name="VSeparator2" type="VSeparator" parent="saves/HBoxContainer"]
margin_left = 179.0
margin_right = 183.0
margin_bottom = 20.0

[node name="delete" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 187.0
margin_right = 270.0
text = "Delete Save"
flat = true

[node name="VSeparator3" type="VSeparator" parent="saves/HBoxContainer"]
margin_left = 274.0
margin_right = 278.0
margin_bottom = 20.0

[node name="back" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 282.0
margin_right = 322.0
text = "Back"
flat = true

[node name="new_save" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="new_save"]
anchor_right = 1.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="new_save/VBoxContainer"]
margin_right = 344.0
margin_bottom = 24.0

[node name="name_label" type="Label" parent="new_save/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Save Name:"

[node name="name" type="LineEdit" parent="new_save/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 344.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 60
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "untitled save"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="difficulty" type="OptionButton" parent="new_save/VBoxContainer"]
margin_top = 28.0
margin_right = 344.0
margin_bottom = 48.0
custom_constants/arrow_margin = 270
text = "Difficulty"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" parent="new_save" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5
margin_top = -20.0
margin_right = 57.5
margin_bottom = 0.0
text = "Create New Save"
flat = true

[node name="cancel" parent="new_save" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -20.0
margin_right = 0.0
margin_bottom = 0.0
text = "Cancel"
flat = true

[node name="Options" parent="." instance=ExtResource( 8 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="pressed" from="main/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="main/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="new_save/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="new_save/cancel" to="." method="_on_cancel_pressed"]
[connection signal="visibility_changed" from="Options" to="." method="_on_Options_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Options"]
